# rust-crypto-core

blockchains/near/: Cargo.toml
blockchains/polkadot/: Cargo.toml
blockchains/solana/: Cargo.toml
blockchains/solana/src/: compact.rs  error.rs  instruction.rs  lib.rs  message.rs  read.rs
blockchains/solana/src/resolvers/: stake.rs  system.rs  token.rs  token_lending.rs  token_swap_v3.rs  vote.rs
blockchains/solana/src/solana_lib/solana_program/: mod.rs  program_option.rs  stake.rs  system_instruction.rs  vote.rs
blockchains/solana/src/solana_lib/spl/token_swap/curve/: base.rs  calculator.rs  constant_price.rs  mod.rs
traits/chain/src/: lib.rs
