[package]
name = "rcc-solana"
version = "0.3.1"
edition = "2021"
license = "Apache-2.0"
description = "A transaction parser for solana."

[lib]
crate-type = ["cdylib", "rlib"]

# 声明这是一个 no_std 库
[features]
default = []


[dependencies]
# 基础编码/解码
bs58 = { version = "0.4.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false }

#alloc = { version = "*" }
# 序列化
serde = { version = "1.0.139", default-features = false, features = ["derive"] }

serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

bincode = { version = "2.0.0-rc.3", default-features = false, features = [
    "derive",
    "serde",
] }

# 数值类型
uint = { version = "0.9.3", default-features = false }
num-derive = { version = "0.3.3", default-features = false }

# 数组操作
arrayref = { version = "0.3.6", default-features = false }

# 自定义依赖
rcc-trait-chain = { path = "../../traits/chain" }
thiserror = { version = "2.0.9", default-features = false }
